--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Mystic</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="password">Password</string>
 </resources>
