--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Mystic</string>
     <string name="sign_up">Sign Up</string>
     <string name="password">Password</string>
+    <string name="kenya">Kenya</string>
+    <string name="_24">24</string>
 </resources>
